--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "npm": "6.14.8",
+    "node": "12.18.4"
+  },
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "build": "tsc"
