--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/inctnce/request-automation-api#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
