--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "dev": "nodemon ./src/index.ts",
+    "start": "node build/index.js
     "build": "tsc"
   },
   "repository": {
