--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "nodemon ./src/index.ts",
-    "start": "node build/index.js",
+    "start": "node dist/index.js",
     "build": "tsc"
   },
   "repository": {
