--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {
     "dev": "nodemon ./src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc"
+    "start": "ts-node src/config/server.ts"
   },
   "repository": {
     "type": "git",
