--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "mysql": "^2.18.1",
-    "typescript": "^4.0.5"
-  },
-  "devDependencies": {
+    "typescript": "^4.0.5",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "express": "^4.17.1",
