--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "nodemon ./src/index.ts",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node ./src/index.ts"
   },
   "repository": {
     "type": "git",
