--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "dev": "nodemon ./src/index.ts",
-    "start": "ts-node ./src/index.ts"
+    "build": "tsc",
+    "start": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
