--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "build": "tsc",
-    "start": "node ./src/index.js"
+    "start": "node ./build/index.js"
   },
   "repository": {
     "type": "git",
