--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
   },
   "homepage": "https://github.com/inctnce/request-automation-api#readme",
   "dependencies": {
-    "cors": "^2.8.5",
-    "mysql": "^2.18.1",
-    "typescript": "^4.0.5",
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/mysql": "^2.15.15",
+    "@types/uuid": "^8.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.6"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.6",
+    "typescript": "^4.0.5",
+    "uuid": "^8.3.1"
   }
 }
