--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "build": "tsc",
+    "postinstall": "npm run build",
     "start": "node ./build/index.js"
   },
   "repository": {
