--- a/package.json
+++ b/package.json
@@ -1,40 +1,102 @@
 {
   "name": "request-automation-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "engines": {
-    "npm": "6.14.8",
-    "node": "12.18.4"
-  },
+  "version": "0.0.0",
   "scripts": {
-    "dev": "nodemon ./src/index.ts",
-    "build": "tsc",
-    "postinstall": "npm run build",
-    "start": "node ./build/index.js"
+    "build": "ts-node build.ts && tsc --build tsconfig.prod.json",
+    "lint": "eslint . --ext .ts",
+    "start": "node -r module-alias/register ./dist --env=production",
+    "start:dev": "nodemon",
+    "test": "nodemon --config ./spec/nodemon.json"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/inctnce/request-automation-api.git"
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts, html",
+    "ignore": [
+      "src/public"
+    ],
+    "exec": "ts-node -r tsconfig-paths/register ./src"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/inctnce/request-automation-api/issues"
+  "_moduleAliases": {
+    "@daos": "dist/daos",
+    "@entities": "dist/entities",
+    "@shared": "dist/shared",
+    "@server": "dist/Server"
   },
-  "homepage": "https://github.com/inctnce/request-automation-api#readme",
+  "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    ],
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "rules": {
+      "max-len": [
+        "error",
+        {
+          "code": 100
+        }
+      ],
+      "no-console": 1,
+      "no-extra-boolean-cast": 0,
+      "@typescript-eslint/restrict-plus-operands": 0,
+      "@typescript-eslint/explicit-module-boundary-types": 0,
+      "@typescript-eslint/no-explicit-any": 0,
+      "@typescript-eslint/no-floating-promises": 0,
+      "@typescript-eslint/no-unsafe-member-access": 0,
+      "@typescript-eslint/no-unsafe-assignment": 0
+    }
+  },
+  "eslintIgnore": [
+    "src/public/",
+    "build.ts"
+  ],
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.8",
     "@types/mysql": "^2.15.15",
     "@types/uuid": "^8.3.0",
-    "cors": "^2.8.5",
+    "command-line-args": "^5.1.1",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^4.2.0",
+    "http-status-codes": "^2.1.4",
+    "jet-logger": "^1.0.2",
+    "jsonfile": "^6.1.0",
+    "module-alias": "^2.2.2",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.6",
-    "typescript": "^4.0.5",
     "uuid": "^8.3.1"
+  },
+  "devDependencies": {
+    "@types/command-line-args": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.8",
+    "@types/find": "^0.2.1",
+    "@types/fs-extra": "^9.0.3",
+    "@types/jasmine": "^3.6.1",
+    "@types/jsonfile": "^6.0.0",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.6",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint": "^7.12.1",
+    "find": "^0.3.0",
+    "fs-extra": "^9.0.1",
+    "jasmine": "^3.6.3",
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1",
+    "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.0.5"
   }
 }
