--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/mysql": "^2.15.15",
     "@types/uuid": "^8.3.0",
+    "bcrypt": "^5.0.0",
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
