--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "bcrypt": "^5.0.0",
     "command-line-args": "^5.1.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -80,6 +81,7 @@
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^9.0.3",
