--- a/.gitignore
+++ b/.gitignore
@@ -113,4 +113,16 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+### VisualStudioCode ###
+.vscode
+!.vscode/tasks.json
+!.vscode/launch.json
+*.code-workspace
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+
 # End of https://www.toptal.com/developers/gitignore/api/node
