--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "ts-node build.ts && tsc --build tsconfig.prod.json",
     "lint": "eslint . --ext .ts",
     "start": "node -r module-alias/register ./dist --env=production",
-    "start:dev": "nodemon",
+    "dev": "nodemon",
     "test": "nodemon --config ./spec/nodemon.json"
   },
   "nodemonConfig": {
