--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   ],
   "dependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql": "^2.15.15",
     "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.0",
@@ -72,6 +73,7 @@
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.2",
     "jsonfile": "^6.1.0",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
